<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_connect"
        android:title="@string/device_connect"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pairing"
        android:title="@string/device_pairing" />
    <item
        android:id="@+id/action_to_scan"
        android:title="@string/to_scan_fragment" />
</menu>